# MyProject

./: CMakeLists.txt  README.md
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: config.json  requests.json  text1.txt  text2.txt  text3.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
